# api-interfaces

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  buf.gen.go.yaml  buf.gen.js.yaml  buf.gen.kt.yaml  buf.gen.py.yaml  buf.gen.swift.yaml  buf.gen.yaml  buf.work.yaml  buf.yaml  build-with-docker.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  update.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: buf.yml  build.yaml  docker.yml  main.yaml
anlatan/: go.mod  go.sum
anlatan/auth/: auth.pb.go  auth_grpc.pb.go  auth_grpc_pb.d.ts  auth_pb.d.ts  auth_pb2.py  auth_pb2_grpc.py
anlatan/client/: colors.go  go.mod  go.sum
anlatan/completion/: completion.pb.go  completion_grpc.pb.go  completion_grpc_pb.d.ts  completion_pb2.py  completion_pb2_grpc.py  go.mod
anlatan/engines/: engines.pb.go  engines_pb.d.ts  engines_pb2.py  engines_pb2_grpc.py
docs/: index.html
gooseai/: README.md  go.mod  go.sum
gooseai/auth/: auth.pb.go  auth_grpc.pb.go  auth_pb2.py  auth_pb2_grpc.py  go.mod
gooseai/client/: README.md  client.py  colors.go  go.mod  go.sum  loadtest.go  resources.go  tokens.go  transport.go  tui.go
gooseai/client/builder/: builder.go
gooseai/client/resources/: unitrim.json
gooseai/completion/: completion.pb.go  completion_pb.d.ts  completion_pb.js  completion_pb2.py  go.mod
gooseai/dashboard/: dashboard.pb.go  dashboard_grpc.pb.go  dashboard_grpc_pb.d.ts  dashboard_grpc_pb.js  dashboard_pb.d.ts  dashboard_pb.js  dashboard_pb2.py  dashboard_pb2_grpc.py  dashboard_pb_service.d.ts  dashboard_pb_service.js
gooseai/engines/: engines.pb.go  engines_grpc.pb.go  engines_grpc_pb.d.ts  engines_grpc_pb.js  engines_pb.d.ts  engines_pb.js  engines_pb2.py  engines_pb2_grpc.py  engines_pb_service.d.ts  engines_pb_service.js
gooseai/finetuning/: finetuning.pb.go  finetuning_grpc.pb.go  finetuning_grpc_pb.d.ts  finetuning_grpc_pb.js  finetuning_pb.d.ts  finetuning_pb.js  finetuning_pb2.py  finetuning_pb2_grpc.py  finetuning_pb_service.d.ts  finetuning_pb_service.js
gooseai/generation/: generation.pb.go  generation_grpc.pb.go  generation_grpc_pb.d.ts  generation_grpc_pb.js  generation_pb.d.ts  generation_pb.js  generation_pb2.py  generation_pb2_grpc.py  generation_pb_service.d.ts  generation_pb_service.js
gooseai/gooseai/: go.mod  go.sum
gooseai/gooseai/dashboard/: dashboard_pb2.py  dashboard_pb_service.d.ts  dashboard_pb_service.js
gooseai/gooseai/generation/: generation.pb.go  generation_pb.d.ts  generation_pb.js
gooseai/gooseai/project/: project.pb.go  project_grpc_pb.d.ts  project_pb2_grpc.py  project_pb_service.js
gooseai/project/: project.pb.go  project_grpc.pb.go  project_grpc_pb.d.ts  project_grpc_pb.js  project_pb.d.ts  project_pb.js  project_pb2.py  project_pb2_grpc.py  project_pb_service.d.ts  project_pb_service.js
gooseai/transfer/: transfer.pb.go  transfer_grpc.pb.go  transfer_grpc_pb.d.ts  transfer_grpc_pb.js  transfer_pb.d.ts  transfer_pb.js  transfer_pb2.py  transfer_pb2_grpc.py  transfer_pb_service.d.ts  transfer_pb_service.js
gooseai/transform/: transform.pb.go  transform_grpc.pb.go  transform_grpc_pb.d.ts  transform_grpc_pb.js  transform_pb.d.ts  transform_pb.js  transform_pb2.py  transform_pb2_grpc.py  transform_pb_service.d.ts  transform_pb_service.js
proto/gooseai/: dashboard.proto  engines.proto  generation.proto  project.proto
samples/: witch_multi.json  witch_noprob.json  witch_stream.json
scripts/: clean-and-generate.mjs
src/proto/: auth.proto  completion.proto  dashboard.proto  engines.proto  finetuning.proto  generation.proto  project.proto  transfer.proto  transform.proto
src/proto/dashboard/: dashboard.proto
src/proto/project/: project.proto
src/proto/stability_api/platform/dashboard/v1/: dashboard.proto
src/proto/stability_api/platform/engines/v1/: engines.proto
src/proto/stability_api/platform/finetuning/: finetuning.proto
src/proto/stability_api/platform/generation/v1/: generation.proto
src/proto/stability_api/platform/project/v1/: project.proto
src/proto/stabilityai/platformapis/dashboard/v1/: dashboard.proto
src/proto/stabilityai/platformapis/engines/v1/: engines.proto
src/proto/stabilityai/platformapis/generation/v1/: generation.proto
src/proto/stabilityai/platformapis/project/v1/: project.proto
src/stability_api/: __about__.py  go.mod  go.sum
src/stability_api/platform/dashboard/v1/: dashboard.pb.go  dashboard_connect.d.ts  dashboard_connect.js  dashboard_grpc.pb.go  dashboard_pb.d.ts  dashboard_pb.js  dashboard_pb2.pyi  dashboard_pb2_grpc.py
src/stability_api/platform/engines/v1/: engines.pb.go  engines_connect.d.ts  engines_connect.js  engines_grpc.pb.go  engines_pb.d.ts  engines_pb.js  engines_pb2.py  engines_pb2.pyi  engines_pb2_grpc.py
src/stability_api/platform/finetuning/: finetuning.pb.go  finetuning_connect.d.ts  finetuning_connect.js  finetuning_grpc.pb.go  finetuning_pb.d.ts  finetuning_pb.js  finetuning_pb2.py  finetuning_pb2.pyi  finetuning_pb2_grpc.py
src/stability_api/platform/finetuning/finetuningconnect/: finetuning.connect.go
src/stability_api/platform/generation/v1/: generation.pb.go  generation_connect.d.ts  generation_connect.js  generation_grpc.pb.go  generation_pb.d.ts  generation_pb.js  generation_pb2.py  generation_pb2.pyi  generation_pb2_grpc.py
src/stability_api/platform/project/v1/: project.pb.go  project_connect.d.ts  project_connect.js  project_pb.d.ts  project_pb.js  project_pb2.py  project_pb2.pyi  project_pb2_grpc.py
src/stability_api/tensors/: tensors.pb.go  tensors_pb.d.ts  tensors_pb.js  tensors_pb2.py  tensors_pb2.pyi
targets/grpc-web-esm/gooseai/completion/: completion_grpc_pb.js  completion_pb.js  completion_pb_service.js
targets/grpc-web-esm/gooseai/dashboard/: dashboard_grpc_pb.js  dashboard_pb.js  dashboard_pb_service.js
targets/grpc-web-esm/gooseai/engines/: engines_grpc_pb.js  engines_pb.js  engines_pb_service.js
targets/grpc-web-esm/gooseai/generation/: generation_grpc_pb.js  generation_pb.js  generation_pb_service.js
(+4 files in other folders)
